--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -151,7 +151,7 @@
                                     <a href="#" class="btn btn-outline-primary">
                                         <i class="fas fa-calendar me-2"></i>Eventos
                                     </a>
-                                    <a href="#" class="btn btn-outline-primary">
+                                    <a href="@Url.Action("index", "Usuario")" class="btn btn-outline-primary">
                                         <i class="fas fa-users me-2"></i>Usuarios
                                     </a>
                                     <a href="#" class="btn btn-outline-primary">
