--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -98,10 +98,13 @@
                                     <i class="fas fa-user-plus me-1 me-md-2"></i>
                                     <span class="btn-text">Registrar Socio</span>
                                 </a>
-                                <a href="@Url.Action("Index", "Usuario")" class="btn btn-esparza-outline btn-sm btn-md-normal">
-                                    <i class="fas fa-users-cog me-1 me-md-2"></i>
-                                    <span class="btn-text">Gestión de Usuarios</span>
-                                </a>
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <a href="@Url.Action("Index", "Usuario")" class="btn btn-esparza-outline btn-sm btn-md-normal">
+                                        <i class="fas fa-users-cog me-1 me-md-2"></i>
+                                        <span class="btn-text">Gestión de Usuarios</span>
+                                    </a>
+                                }
                             </div>
                         </div>
                     </div>
