--- a/Views/Home/AccessDenied.cshtml
+++ b/Views/Home/AccessDenied.cshtml
@@ -11,7 +11,7 @@
                 <h4><i class="fas fa-ban"></i> Acceso Denegado</h4>
                 <p>No tienes permisos para acceder a esta página.</p>
             </div>
-            <a href="@Url.Action("Usuario", "Login")" class="btn btn-primary">Volver al Inicio</a>
+            <a href="@Url.Action("Index", "Home")" class="btn btn-primary">Volver al Inicio</a>
         </div>
     </div>
 </div></div>
