--- a/Views/Usuario/Login.cshtml
+++ b/Views/Usuario/Login.cshtml
@@ -44,14 +44,14 @@
                         </h3>
 
                         <!-- Alertas -->
-                        @if (TempData["SuccessMessage"] != null)
+                        @* @if (TempData["SuccessMessage"] != null)
                         {
                             <div class="alert alert-success-login alert-dismissible fade show" role="alert">
                                 <i class="fas fa-check-circle me-2"></i>
                                 @TempData["SuccessMessage"]
                                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                             </div>
-                        }
+                        } *@
 
                         @if (TempData["ErrorMessage"] != null)
                         {
